06.2-Gateway API/2.paytam-app/gateway_class.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: alb
spec:
  controllerName: ingress.k8s.aws/alb
