06.2-Gateway API/2.paytam-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: paytam
  labels:
    app: paytam
