06.2-Gateway API/2.paytam-app/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: paytam-svc
  namespace: paytam
  labels:
    app: paytam
spec:
  type: ClusterIP
  selector:
    app: paytam
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
