06.2-Gateway API/2.paytam-app/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: paytam-gateway
  namespace: paytam
spec:
  gatewayClassName: gateway-api
  listeners:
    - name: http
      protocol: HTTP
      port: 80
