06.2-Gateway API/2.paytam-app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: paytam-route
  namespace: paytam
  labels:
    app: paytam
spec:
  parentRefs:
    - name: paytam-gateway
      namespace: paytam
  hostnames:
    - paytam.tagent.cfd
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: paytam-svc
          port: 80
